crates/markdown/src/snapshots/markdown__tests__with_shortcode.snap
---
source: crates/markdown/src/lib.rs
expression: document
---
date: "2025-01-01 06:00:00 UTC"
updated: "2025-01-01 06:00:00 UTC"
content: "<h1>Hello World</h1>\n<p>\n\n\n<div class=\"note\">\n&lt;p&gt;this is a note!&lt;&#x2f;p&gt;\n\n</div>\n        </p>\n<p>This is some more text.</p>\n<p>\n\n\n<div class=\"fancy\">\n<h1> testing </h1>\n&lt;p&gt;this is a note!&lt;&#x2f;p&gt;\n\n</div>\n        </p>\n"
toc: []
summary: "<h1>Hello World</h1>\n<p>\n\n\n<div class=\"note\">\n&lt;p&gt;this is a note!&lt;&#x2f;p&gt;\n\n</div>\n        </p>\n<p>This is some more text.</p>\n<p>\n\n\n<div class=\"fancy\">\n<h1> testing </h1>\n&lt;p&gt;this is a note!&lt;&#x2f;p&gt;\n\n</div>\n        </p>\n"
frontmatter:
  title: Test
  tags:
    - a
    - b
    - c
  template: ~
  date: ~
  updated: ~
  series: ~
  slug: ~
  draft: false
